--- a/app/documentation/documentation.html
+++ b/app/documentation/documentation.html
@@ -36,7 +36,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.file('./readme.md')
+      fetcher: Flatdoc.github('Wulfcastle/Documentation')
     });
   </script>
 </head>
