--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
    <title data-ng-bind="pageTitle()">Sussurus - Angular Bootstrap Admin Template</title>
    <link rel="stylesheet" href="app/css/app.css" data-ng-if="!app.layout.isRTL">
    <link rel="stylesheet" href="app/css/app-rtl.css" data-ng-if="app.layout.isRTL">
+   <link rel="stylesheet" href="app/css/fonts.min.css">
+
+
 </head>
 
 <body data-ng-class="{ 'layout-fixed' : app.layout.isFixed, 'aside-collapsed' : app.layout.isCollapsed, 'layout-boxed' : app.layout.isBoxed }">
